--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,16 @@
             <artifactId>graphql-java-tools</artifactId>
             <version>12.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java-extended-scalars</artifactId>
+            <version>18.1</version>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.3</version>
+        </dependency>
     </dependencies>
 
     <build>
