--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=post@124
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-circular-references=true
 spring.graphql.path=/api/graphql
+server.port=8081
