--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/graphqlDb
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.datasource.username=postgres
 spring.datasource.password=post@124
 spring.jpa.hibernate.ddl-auto=update
-spring.main.allow-circular-references=true
-spring.graphql.path=/api/graphql
 server.port=8081
