--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
             <artifactId>graphql-spring-boot-starter</artifactId>
             <version>12.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.zhokhov.graphql</groupId>
+            <artifactId>graphql-datetime-spring-boot-starter</artifactId>
+            <version>4.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
